Fixed alignment issues

--- a/styles/create-course.css
+++ b/styles/create-course.css
@@ -435,7 +435,7 @@ h6 {
 .trainee-course-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 30rem;
+  /* height: 30rem; */
   padding: 3rem;
 }
 
