--- a/styles/edit-course.css
+++ b/styles/edit-course.css
@@ -460,7 +460,7 @@ h6 {
 .trainee-course-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 30rem;
+  /* height: 30rem; */
   padding: 3rem;
 }
 
